--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "@types/react": "^17.0.4",
     "@types/react-dom": "^17.0.3",
     "@types/snowpack-env": "^2.3.3",
+    "@typescript-eslint/parser": "^4.25.0",
     "@web/test-runner": "^0.13.3",
     "chai": "^4.3.4",
+    "eslint": "^7.27.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "^2.2.1",
     "snowpack": "^3.3.7",
     "typescript": "^4.2.4"
