--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "lint": "prettier --check \"src/**/*.{js,jsx,ts,tsx}\""
   },
   "dependencies": {
+    "@emotion/react": "^11",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@chakra-ui/react": "^1.6.2",
     "@emotion/core": "^11.0.0",
-    "@emotion/styled": "^11.3.0",
+    "@emotion/styled": "^11",
     "@snowpack/plugin-dotenv": "^2.1.0",
     "@snowpack/plugin-react-refresh": "^2.5.0",
     "@snowpack/plugin-typescript": "^1.2.1",
@@ -29,7 +30,7 @@
     "chai": "^4.3.4",
     "eslint": "^7.27.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "framer-motion": "^4.1.17",
+    "framer-motion": "^4",
     "prettier": "^2.2.1",
     "snowpack": "^3.3.7",
     "typescript": "^4.2.4"
